Fix: Wrap form buttons for better alignments

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,6 +179,7 @@ html, body {
     background-color: var(--yellow);
     border: none;
     padding: 1rem 2rem;
+    width: 100%;
     font-size: 1rem;
     letter-spacing: 2px;
     font-weight: bold;
@@ -192,6 +193,16 @@ html, body {
 .cta-btn:hover {
     background-color: #ffb300;
 }
+
+.cta-btn-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-start;
+  gap: 1rem;
+  margin-top: 1.5rem;
+  flex-wrap: wrap;
+}
+
 
 .dashboard {
     padding: 1rem;
@@ -368,6 +379,7 @@ cursor: pointer;
 /* Modal actions button row */
 .modal-actions {
 display: flex;
+flex-direction: column;
 gap: 1rem;
 margin-top: 1.5rem;
 }
